clusters/9ka/influxdb/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: influxdb
  namespace: influxdb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: influxdb
      app.kubernetes.io/name: influxdb
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "api"
        protocol: TCP
